@@ -3,6 +3,13 @@ from pysnmp.proto import errind, error
 
 class NoAuth(base.AbstractAuthenticationService):
     serviceID = (1, 3, 6, 1, 6, 3, 10, 1, 1, 1)  # usmNoAuthProtocol
+
+    def hashPassphrase(self, authKey):
+        return
+    
+    def localizeKey(self, authKey, snmpEngineID):
+        return
+    
     # 7.2.4.2
     def authenticateOutgoingMsg(self, authKey, wholeMsg):
         raise error.StatusInformation(errorIndication=errind.noAuthentication)
